# m-interface

./: CMakeLists.txt  build.sh  build_flash.sh  build_flash_monitor.sh  reboot_and_monitor.sh  sdkconfig
components/core/: CMakeLists.txt  m_alloc.c  m_alloc.h  m_block.c  m_block.h  m_bump_arena.c  m_bump_arena.h  m_context.c  m_context.h  m_eff_desc.c  m_eff_desc.h  m_effect.c  m_effect.h  m_error_codes.c  m_error_codes.h  m_expr_scope.c  m_expr_scope.h  m_expression.c  m_expression.h  m_files.c  m_files.h  m_hfunc.c  m_hfunc.h  m_int_context.c  m_int_context.h  m_int_files.c  m_int_files.h  m_int_hfunc.c  m_int_lv_log.c  m_int_parameter.c  m_int_parameter.h  m_int_pipeline.c  m_int_pipeline.h  m_int_profile.c  m_int_profile.h  m_int_representation.c  m_int_representation.h  m_int_sequence.c  m_int_sequence.h  m_int_settings.c  (+34 more)
components/drivers/: CMakeLists.txt  m_footswitch.c  m_fpga.c  m_fpga.h  m_i2c.h  m_int_footswitch.c  m_int_fpga.c  m_int_fpga.h  m_int_sd.c  m_int_sd.h  m_int_sgtl5000.c  m_int_sgtl5000.h  m_int_touch_irq.c  m_int_touch_irq.h  m_sd.c  m_sd.h  m_sgtl5000.c  m_sgtl5000.h  m_touch_irq.c  tusb_config.h  waveshare_dsi_touch_5_a.c  waveshare_dsi_touch_5_a.h
components/fpga/: m_fpga_comms.c  m_fpga_comms.h  m_fpga_encoding.c  m_fpga_encoding.h  m_fpga_io.c  m_fpga_io.h  m_reg_format.c  m_reg_format.h
components/fpga_comms/: CMakeLists.txt  m_fpga_comms.c  m_fpga_comms.h  m_fpga_encoding.c  m_fpga_encoding.h  m_fpga_io.c  m_fpga_io.h  m_reg_format.c  m_reg_format.h
components/parser/: CMakeLists.txt  asm.c  asm.h  block.c  block.h  dictionary.c  dictionary.h  dq.c  dq.h  encode.c  encode.h  m_asm_parser.c  m_asm_parser.h  m_dict_extract.c  m_dict_extract.h  m_dictionary.c  m_dictionary.h  m_eff_parser.c  m_eff_parser.h  m_eff_section.c  m_eff_section.h  m_expr_parser.c  m_expr_parser.h  m_expression.c  m_parser.c  m_parser.h  m_res_extract.c  m_res_extract.h  m_resource.c  m_resource.h  m_tokenizer.c  m_tokenizer.h  parameter.c  parameter.h  reg.c  reg.h  resources.c  resources.h  tokenizer.c  tokenizer.h  (+2 more)
components/teensy_comms/: CMakeLists.txt  m_comms.c  m_int_comms.c  m_int_profile_send.c
components/ui/: CMakeLists.txt  m_button.c  m_button.h  m_int_button.c  m_int_button.h  m_int_menu.c  m_int_menu.h  m_int_parameter_widget.c  m_int_profile_view.c  m_int_profile_view.h  m_int_sequence_list.c  m_int_sequence_list.h  m_int_sequence_view.c  m_int_sequence_view.h  m_int_transformer_select.c  m_int_transformer_settings.c  m_int_transformer_settings.h  m_int_transformer_view.c  m_int_ui.c  m_int_ui.h  m_menu.c  m_menu.h  m_parameter_view.h  m_parameter_widget.c  m_parameter_widget.h  m_profile_settings.c  m_profile_view.c  m_profile_view.h  m_sequence_list.c  m_sequence_list.h  m_sequence_view.c  m_sequence_view.h  m_transformer_select.c  m_transformer_select.h  m_transformer_settings.c  m_transformer_view.c  m_transformer_view.h  m_ui.c  m_ui.h
include/: lvgl_port.h  m_comms.h  m_error_codes.h  m_int.h  m_int_actions.h  m_int_button.h  m_int_comms.h  m_int_context.h  m_int_display.h  m_int_files.h  m_int_footswitch.h  m_int_glide_button.h  m_int_i2c.h  m_int_logging.h  m_int_lv_log.h  m_int_malloc.h  m_int_menu.h  m_int_parameter.h  m_int_parameter_widget.h  m_int_pipeline.h  m_int_profile.h  m_int_profile_list.h  m_int_profile_send.h  m_int_profile_settings.h  m_int_profile_view.h  m_int_representation.h  m_int_sd.h  m_int_sequence.h  m_int_sequence_list.h  m_int_sequence_view.h  m_int_settings.h  m_int_transformer.h  m_int_transformer_init.h  m_int_transformer_select.h  m_int_transformer_settings.h  m_int_transformer_view.h  m_int_transformer_widget.h  m_int_ui.h  m_linked_list.h  m_status.h  (+3 more)
main/: CMakeLists.txt  idf_component.yml  lvgl_port.c  m_error_codes.c  m_int.c  m_int.h  m_int_button.c  m_int_comms.c  m_int_context.c  m_int_display.c  m_int_files.c  m_int_footswitch.c  m_int_glide_button.c  m_int_i2c.c  m_int_lv_log.c  m_int_malloc.c  m_int_menu.c  m_int_parameter.c  m_int_parameter_widget.c  m_int_pipeline.c  m_int_profile.c  m_int_profile_list.c  m_int_profile_send.c  m_int_profile_settings.c  m_int_profile_view.c  m_int_representation.c  m_int_sd.c  m_int_sequence.c  m_int_sequence_list.c  m_int_sequence_view.c  m_int_settings.c  m_int_touch_irq.c  m_int_transformer.c  m_int_transformer_init.c  m_int_transformer_select.c  m_int_transformer_settings.c  m_int_transformer_table.c  m_int_transformer_view.c  m_int_transformer_widget.c  m_int_ui.c  (+6 more)
